objects/Farm_VIP_Registration__c.object
<CustomObject>
    <description>Used to capture and associate a contact that a sales rep wants to invite to a Farm VIP Event (campaign record). Farm VIP Registration record is associated to the contact, the campaign (Farm VIP Event), and an Opportunity - which the sales rep can select.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Registrant&apos;s organization&apos;s Account # from the associated Account record.</description>
        <formula>Registrant__r.Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animals_Influenced__c</fullName>
        <description>Number of animals influenced for an Influencer</description>
        <label>Animals Influenced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>Date that the record was Approved</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approval status for Farm VIP Registration record. When the are &quot;approved&quot; they are added to the related Farm VIP customer event with the campaign member status of &quot;Registered&quot;</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Dealer__c</fullName>
        <description>For the Contact, will display the Associated dealer when there is one identified.</description>
        <formula>Registrant__r.Account.Associated_Dealer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type__c</fullName>
        <description>Formula field that pulls the Registrant&apos;s associated account&apos;s Record Type</description>
        <formula>Registrant__r.Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Farm VIP registrant&apos;s City that will display if populated from their contact record</description>
        <formula>Registrant__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>Indicates the role of the Contact being invited to Farm VIP Event. If this information is present on the Contact record, it will be populated.</description>
        <formula>TEXT( Registrant__r.Role__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Indicates the type of Contact being invited to Farm VIP Event. If this information is present on the Contact record, it will be prepopulated.</description>
        <formula>TEXT( Registrant__r.Contact_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Customer that VIP Farm Registrant is associated to.</description>
        <formula>Registrant__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Event__c</fullName>
        <description>Date of related Farm VIP Event</description>
        <formula>Farm_VIP_Event__r.Date_of_Event__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Farm VIP registrant&apos;s email that will display if populated from their contact record</description>
        <formula>Registrant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_VIP_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Farm VIP Event that contact is invited to - filtered down to only Farm VIP Event campaigns.</description>
        <label>Farm VIP Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordType.Name</field>
                <operation>equals</operation>
                <value>Farm VIP Event</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Status</field>
                <operation>equals</operation>
                <value>Registration Open</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Farm VIP Registrations</relationshipLabel>
        <relationshipName>Farm_VIP_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Host_will_be_attending__c</fullName>
        <description>Indicates if the Host for customer will be physically attending the Farm VIP event</description>
        <label>I will be attending?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Registrant&apos;s title field from their contact record.</description>
        <formula>Registrant__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_of_Attendees__c</fullName>
        <formula>Farm_VIP_Event__r.Maximum_Registrants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Farm VIP registrant&apos;s Mobile number that will display if populated from their contact record</description>
        <formula>Registrant__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Teams_Farm_VIP_s__c</fullName>
        <formula>if(
 text(Owner:User.Sales_Division__c) = text($User.Sales_Division__c) ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Teams Farm VIP&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Any additional Notes about the Registrant</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Approved_Attendees__c</fullName>
        <formula>Farm_VIP_Event__r.NumberOfContacts</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Approved Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity related to Contact / Account that is driving the Farm VIP Event registration</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Farm VIP Registrations</relationshipLabel>
        <relationshipName>Farm_VIP_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that is checked when a Farm VIP Registration record is rejected.  Then upon re-submission, this checkbox will allow the approvers to see which records have been submitted versus those that have been re-submitted.</description>
        <label>Re-submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_No_Email__c</fullName>
        <description>Displays the &quot;Reason No Email&quot; from contact</description>
        <formula>Registrant__r.Reason_No_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason No Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_No_Phone__c</fullName>
        <description>Displays the Reason no Phone from contact</description>
        <formula>Registrant__r.Reason_No_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason No Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact to be invited to Farm VIP Event</description>
        <label>Registrant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Farm VIP Registrations</relationshipLabel>
        <relationshipName>Farm_VIP_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact_Ids__c</fullName>
        <description>Back End Development purposes.

field is used to store the related contacts that have been additionally added to the vip registration record.</description>
        <label>Related Contact Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Room_With__c</fullName>
        <description>Who the Registrant is planning on rooming with</description>
        <label>Room With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>Salutation of the Contact being invited</description>
        <formula>TEXT( Registrant__r.Salutation )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specie_Focus__c</fullName>
        <description>Specie Focus for the related Farm VIP Event</description>
        <formula>TEXT( Farm_VIP_Event__r.Specie_Focus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specie Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Farm VIP registrant&apos;s State that will display if populated from their contact record</description>
        <formula>Registrant__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Farm VIP registrant&apos;s Street Address that will display if populated on their contact record</description>
        <formula>Registrant__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Suffix for the contact being invited to the Farm VIP Event</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>DVM</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traveling_Via__c</fullName>
        <description>How the Registrant plans to travel</description>
        <label>Traveling Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flying</fullName>
                </value>
                <value>
                    <fullName>Driving</fullName>
                </value>
                <value>
                    <fullName>Charter Bus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wearable_Size_if_applicable__c</fullName>
        <description>If the Customer Event features a wearable, what size does the Nominee need</description>
        <label>Wearable Size (if applicable)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>XS</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
                <value>
                    <fullName>XXL</fullName>
                </value>
                <value>
                    <fullName>3XL</fullName>
                </value>
                <value>
                    <fullName>4XL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_Event_Id__c</fullName>
        <formula>Farm_VIP_Event__r.X18_Digit_Customer_Event_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Event Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Farm VIP registrant&apos;s Zip Code that will display if populated from their contact record</description>
        <formula>Registrant__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Farm VIP Registration</label>
    <listViews>
        <fullName>All_Farm_VIP_Registrations</fullName>
        <columns>NAME</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Farm VIP Registrations</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <label>Awaiting Approval || All</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Cattle</fullName>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Cattle</value>
        </filters>
        <label>Awaiting Approval || Cattle</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Companion</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Companion</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>PMI Pet</value>
        </filters>
        <label>Awaiting Approval || PMI Pet</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Dairy</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Dairy - Young Animal</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Dairy - Transition &amp; Lactating Cow</value>
        </filters>
        <label>Awaiting Approval || Dairy</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Deer_Elk</fullName>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Deer &amp; Elk</value>
        </filters>
        <label>Awaiting Approval || Deer &amp; Elk</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Educ_Training</fullName>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Education &amp; Training</value>
        </filters>
        <label>Awaiting Approval || Educ &amp; Training</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Fish_Aqua</fullName>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Fish &amp; Aqua</value>
        </filters>
        <label>Awaiting Approval || Fish &amp; Aqua</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Flock</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Flock</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Backyard Poultry</value>
        </filters>
        <label>Awaiting Approval || Backyard Poultry</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Goat</fullName>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Goat</value>
        </filters>
        <label>Awaiting Approval || Goat</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Horse</fullName>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Horse</value>
        </filters>
        <label>Awaiting Approval || Horse</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Mazuri</fullName>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Mazuri</value>
        </filters>
        <label>Awaiting Approval || Mazuri</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Rabbit</fullName>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Rabbit</value>
        </filters>
        <label>Awaiting Approval || Rabbit</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Show</fullName>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Show</value>
        </filters>
        <label>Awaiting Approval || Show</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval_Swine</fullName>
        <booleanFilter>1 AND (2 OR  3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Farm_VIP_Event__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>Registrant__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Attendee_Type__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Swine</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Swine - Commercial</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Swine - Retail</value>
        </filters>
        <label>Awaiting Approval || Swine</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>VIP-{0000}</displayFormat>
        <label>Farm VIP Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Farm VIP Registrations</pluralLabel>
    <recordTypes>
        <fullName>Approved_Farm_VIP_Event_Registration</fullName>
        <active>true</active>
        <description>Approved Farm VIP Event Nominations</description>
        <label>Approved Farm VIP Event Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>FarmVIPEventRegistration</fullName>
        <active>true</active>
        <description>Farm VIP Registrations</description>
        <label>Farm VIP Event Registration</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>